<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">宝马培训学院</string>
    <string name="title_login_activity">登陆</string>
    <string name="log_in_success">您已成功登陆.</string>
    <string name="log_in_failure">登陆连接失败!</string>
    <string name="ui_activity_regist">正在注册</string>
    <string name="ui_activity_login">正在登录</string>
    <string name="ui_activity_fail">连接网络失败</string>
    <string name="ui_activity_no_network">无网络连接, 请检查可用网络</string>
    <string name="ui_activity_warning">警告!</string>
    <string name="ui_activity_cancel">取消</string>
    <string name="sign_in">登陆</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="remember_me">自动登陆</string>
    <string name="register_failure">注册失败</string>
    <string name="soft_downloading">正在下载: </string>
    <string name="password_remembered">将会记住您的帐户和密码!</string>
    <string name="menu_home">首页</string>
    <string name="menu_peixun">内部培训</string>
    <string name="menu_yuelan">客户阅览</string>
    <string name="menu_more">更多</string>
    <string name="hint_enter_username">请输入用户名</string>
    <string name="hint_enter_pwd">请输入密码</string>
    <string name="display_car_image">display for car image</string>
    <!-- Do not translate. Format of the timer that shows how much has been recorded so far -->
    <string name="timer_format" translatable="false"><xliff:g id="format">%02d:%02d</xliff:g></string>
    <string name="ui_activity_exam_time_is_up">exam time is up</string>
    <string name="ui_activity_exam_get_score">exam get score</string>
    <string name="ui_activity_exam_unanswered_notice">exam unanswered notice</string>
    <string name="ui_activity_progress_bar">下载进度</string>
    <string name="ui_activity_cancel_download">取消下载</string>
    <string name="ui_activity_exam_quict">退出考试</string>
    <string name="ui_activity_clear_cache">清除缓存</string>
    <string name="ui_activity_survey_unanswered_notice">survey unanswered notice</string>
    <string name="loading">请求提交中, 请稍候...</string>
    <string name="tips">提示</string>
    <string name="global_no_content">无   </string>
    <string name="global_btn_ok">确定</string>
    <string name="global_btn_cancel">取消</string>
    <string name="tv_dialog_mult">选择关系情况</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="gotye_forbidden_send_tip">您已被禁言，如需恢复请与管理员联系！</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="take_picture">拍照</string>
    <string name="select_from_album">从相册选择</string>

    <!--Option to start voice recorder -->
    <string name="conversations_strings_hold_to_talk_txt" xliff:restype="x-GENERIC/BUTTONNORMAL/MEDIUM/SMALL">按住讲话</string>
    <!--Option to end voice recorder -->
    <string name="conversations_strings_press_to_release" xliff:restype="x-GENERIC/BUTTONNORMAL/MEDIUM/SMALL">Press to release</string>
    <!-- Notification text shown it's too short for voice recorder -->
    <string name="conversations_strings_too_short_to_record" xliff:restype="x-GENERIC/BUTTONNORMAL/MEDIUM/SMALL">录音时间太短</string>
    <!-- Notification text shown when voice record finished -->
    <string name="conversations_strings_record_finished" xliff:restype="x-GENERIC/BUTTONNORMAL/MEDIUM/SMALL">录音完成</string>
    <!-- Notification text shown when voice record canceld -->
    <string name="conversations_strings_record_canceled" xliff:restype="x-GENERIC/BUTTONNORMAL/MEDIUM/SMALL">录音取消</string>
    <!-- Notification text shown on how to cancel voice record -->
    <string name="conversations_strings_slide_up_to_canceled" xliff:restype="x-GENERIC/BUTTONNORMAL/MEDIUM/SMALL">上滑取消</string>
    <!-- Notification text shown on when user finger is the on the record dialog -->
    <string name="conversations_strings_release_to_cancel" xliff:restype="x-GENERIC/BUTTONNORMAL/MEDIUM/SMALL">松开取消发送</string>
</resources>